implemented swagger for all endpoints;
