# internal/chat/application/dto/create_message_dto.go
@@ -1,8 +1,8 @@
 package dto
 
 type CreateMessageReqDTO struct {
-	RoomID      string `validate:"required"`
-	SenderID    string `validate:"required"`
+	RoomID      string `swaggerignore:"true" validate:"required"`
+	SenderID    string `swaggerignore:"true" validate:"required"`
 	Content     string `json:"content" validate:"required"`
 	MessageType string `json:"message_type" validate:"required"`
 }
